created update & view all customers components

--- a/src/app/page/customer-manage/add-customer/add-customer.component.html
+++ b/src/app/page/customer-manage/add-customer/add-customer.component.html
@@ -17,6 +17,6 @@
             aria-describedby="basic-addon1">
     </div>
 
-    <button class="bg-success p-2" (click) = "addCustomer()">Add</button>
+    <button type="button" class="bg-success p-2" (click) = "addCustomer()">Add</button>
 
 </div>
