--- a/src/app/page/customer-manage/view-all-customers/view-all-customers.component.html
+++ b/src/app/page/customer-manage/view-all-customers/view-all-customers.component.html
@@ -1,1 +1,23 @@
-<p>view-all-customers works!</p>
+<div class="container mt-3">
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">City</th>
+                <th scope="col">Contact</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row" *ngFor="let customer of customerList; index as i"></th>
+                <td>{{customer.id}}</td>
+                <td>{{customer.name}}</td>
+                <td>{{customer.city}}</td>
+                <td>{{customer.contact}}</td>
+            </tr>
+            
+        </tbody>
+    </table>
+
+</div>
